--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,8 @@
-.grid, main .projects, main .main, main, body {
+.grid, main .projects, main .main, main, main .header, body {
   display: grid;
 }
 
-.flex, main .projects .actions, nav .nav-item, nav .containor {
+.flex, main .trending-item .user-id, main .trending-item, main .projects .actions, main .h, nav .nav-item, nav .containor {
   display: flex;
 }
 
@@ -49,6 +49,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+p {
+  margin: 0rem;
+}
+
 nav {
   height: 100%;
   padding: 0 1rem;
@@ -56,7 +60,6 @@ nav {
   color: #FFF;
 }
 nav p {
-  margin: 0rem;
   font-weight: bold;
 }
 nav .containor {
@@ -78,6 +81,64 @@ nav .icon {
   margin-right: 0.5rem;
 }
 
+main .header {
+  box-shadow: 1px 1px 10px #636363;
+  top: 0;
+  grid-template-columns: 4fr 2fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 0;
+}
+main .h {
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+  padding: 0.5rem;
+}
+main .search, main .user-profile {
+  justify-content: flex-start;
+}
+main .search .icon, main .user-profile .icon {
+  margin: 0 1rem;
+}
+main .user-mini-profile {
+  justify-self: end;
+  padding: 0 2rem;
+}
+main .user-mini-profile * {
+  margin: 0 0.7rem;
+}
+main .name {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+main .hello-user {
+  font-weight: bold;
+}
+main .hello-user .greet {
+  font-size: 0.8rem;
+}
+main .hello-user .username {
+  font-size: 1.5rem;
+}
+main [type=text] {
+  width: calc(100% - 200px);
+  height: 2rem;
+  border-radius: 2rem;
+  outline: none;
+  border: none;
+  background-color: #E2E8F0;
+  padding: 0 1.5rem;
+}
+main .user-actions button {
+  width: 80px;
+  height: 35px;
+  border-radius: 2rem;
+  border: none;
+  outline: none;
+  background-color: #1992D4;
+  color: #FFF;
+}
+
 main {
   grid-template-columns: auto;
   grid-template-rows: 2fr 10fr;
@@ -91,10 +152,6 @@ main .summary {
 main .title {
   font-size: 1.1rem;
   margin-bottom: 0;
-}
-main .header {
-  box-shadow: 1px 1px 10px #636363;
-  top: 0;
 }
 main .main {
   grid-template-columns: 3fr 1fr;
@@ -143,6 +200,29 @@ main .accouncements .summary, main .trendings .summary {
 main .announcement:not(.announcement:last-child) {
   border-bottom: 1px solid #636363;
   padding-bottom: 1rem;
+}
+main .trending-item {
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  padding: 0.4rem 0;
+}
+main .trending-item .avatar {
+  height: 35px;
+  width: 35px;
+  margin: 0 0.5rem;
+}
+main .trending-item .user-id {
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+main .trending-item .user-title {
+  font-weight: 500;
+}
+main .trending-item .user-subtitle {
+  font-weight: 500;
+  font-size: 0.7rem;
 }
 
 /*# sourceMappingURL=main.css.map */
