--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,10 @@
   background-color: #FFF;
 }
 
+.hidden, .toggle {
+  display: none;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -42,9 +46,9 @@ body {
   grid-template-rows: auto;
   gap: 0;
   background-color: #E2E8F0;
-  max-width: 100%;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+  max-width: 1500px;
   margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -53,11 +57,27 @@ p {
   margin: 0rem;
 }
 
+.toggle {
+  position: absolute;
+  top: 20px;
+  left: 10px;
+  background-color: #1992D4;
+  height: 50px;
+  width: 50px;
+  border-radius: 0.5rem;
+}
+
 nav {
+  overflow: hidden;
+  transition: 1s all linear;
+  position: relative;
   height: 100%;
   padding: 0 1rem;
   background-color: #1992D4;
   color: #FFF;
+}
+nav h1 {
+  font-size: 1.75rem;
 }
 nav p {
   font-weight: bold;
@@ -93,12 +113,17 @@ main .h {
   align-items: center;
   flex-direction: row;
   padding: 0.5rem;
+  width: 100%;
 }
 main .search, main .user-profile {
+  width: 100%;
   justify-content: flex-start;
 }
 main .search .icon, main .user-profile .icon {
   margin: 0 1rem;
+}
+main .search {
+  padding-left: 60px;
 }
 main .user-mini-profile {
   justify-self: end;
@@ -121,7 +146,7 @@ main .hello-user .username {
   font-size: 1.5rem;
 }
 main [type=text] {
-  width: calc(100% - 200px);
+  width: 90%;
   height: 2rem;
   border-radius: 2rem;
   outline: none;
@@ -223,6 +248,92 @@ main .trending-item .user-title {
 main .trending-item .user-subtitle {
   font-weight: 500;
   font-size: 0.7rem;
+}
+
+@media screen and (max-width: 1000px) {
+  .toggle {
+    display: block;
+  }
+
+  body {
+    grid-template-columns: 12fr;
+    grid-template-rows: auto;
+    gap: 0;
+  }
+
+  nav {
+    display: none;
+  }
+
+  main .header {
+    padding: 0;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 0;
+    position: static;
+    max-height: 170px;
+  }
+  main .h {
+    padding: 0.25rem;
+    width: 100%;
+  }
+  main .search {
+    padding-left: 60px;
+    grid-column: 1/3;
+  }
+  main .user-mini-profile {
+    display: none;
+  }
+  main .hello-user .greet {
+    font-size: 0.6rem;
+  }
+  main .hello-user .username {
+    font-size: 1.3rem;
+  }
+
+  main {
+    grid-template-columns: auto;
+    grid-template-rows: 1fr 10fr;
+    gap: 0;
+  }
+  main .summary {
+    margin: 0.1rem auto;
+  }
+  main .title {
+    font-size: 1rem;
+  }
+  main .main {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    gap: 1rem;
+  }
+  main .side-panel {
+    margin: 1rem;
+  }
+  main .projects {
+    grid-template-columns: 1fr 1fr;
+  }
+  main .projects .project {
+    border-radius: 0.5rem;
+    padding: 0.25rem 0.5rem;
+    border-left: 0.5rem solid #F0B429;
+  }
+  main .section-heading {
+    font-size: 1.15rem;
+  }
+  main .accouncements, main .trendings {
+    border-radius: 0.25rem;
+  }
+  main .accouncements .title, main .trendings .title {
+    margin-top: 0.5rem;
+  }
+  main .accouncements :first-child .title, main .trendings :first-child .title {
+    margin-top: 0;
+  }
+  main .announcement:not(.announcement:last-child) {
+    border-bottom: 1px solid #636363;
+    padding-bottom: 1rem;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
