--- a/styles/sass.scss
+++ b/styles/sass.scss
@@ -75,6 +75,10 @@ $space: 1rem;
     background-color: #FFF;
 }
 
+.hidden{
+    display: none;
+}
+
 
 // Styles
 * {
@@ -85,9 +89,9 @@ body {
     @extend .grid;
     @include gridTemp($cols:2fr 10fr);
     background-color: $clrLtGray;
-    max-width: 100%;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+    max-width: 1500px;
     margin: 0 auto;
     font-family: $family;
 }
@@ -96,11 +100,29 @@ p {
     margin: 0rem;
 }
 
+.toggle {
+    @extend .hidden;
+    position: absolute;
+    top: 20px;
+    left: 10px;
+    background-color: $clrBlue;
+    height: 50px;
+    width: 50px;
+    border-radius: 0.5rem;
+}
+
 nav {
+    overflow: hidden;
+    transition: 1s all linear;
+    position: relative;
     height: 100%;
     padding: 0 $space;
     background-color: $clrBlue;
     color: $clrWhite;
+
+    h1 {
+        font-size: $fsize * 1.75;
+    }
 
     p {
         font-weight: $bold;
@@ -130,12 +152,14 @@ nav {
 }
 
 
+
 main {
     .header {
         @extend .whitebg;
         box-shadow: 1px 1px 10px $clrGray;
         @extend .padding;
         @extend .sticky;
+
         top: 0;
 
         @extend .grid;
@@ -146,14 +170,20 @@ main {
         @extend .flex;
         @include flexing(space-evenly, center);
         padding: 0.5rem;
+        width: 100%;
     }
 
     .search, .user-profile {
+        width: 100%;
         justify-content: flex-start;
 
         .icon {
             margin: 0 $space;
         }
+    }
+
+    .search {
+        padding-left: 60px;
     }
 
     .user-mini-profile {
@@ -182,7 +212,7 @@ main {
     }
 
     [type="text"] {
-        width: calc(100% - 200px);
+        width: 90%;
         height: 2rem;
         border-radius: 2rem;
         outline: none;
@@ -314,4 +344,125 @@ main {
             font-size: $fsize * 0.7;
         }
     }
+}
+
+
+
+
+
+// setting up everything for mobile layout
+@media screen and (max-width: 1000px) {
+    .toggle {
+        display: block;
+    }
+
+    body {
+        @include gridTemp($cols: 12fr);
+    }
+
+    
+    nav {
+        display: none;
+
+    }
+
+    
+
+    main {
+        .header {
+            padding: 0;
+            @include gridTemp(1fr 1fr, 1fr 1fr, 0);
+            position: static;
+            max-height: 170px;
+        }
+
+        .h {
+            padding: 0.25rem;
+            width: 100%;
+        }
+
+        .search {
+            padding-left: 60px;
+            grid-column: 1 / 3;
+        }
+
+        .user-mini-profile {
+           display: none;
+        }
+
+        .hello-user {
+            .greet {
+                font-size: $fsize * 0.6;
+            }
+
+            .username {
+                font-size: $fsize * 1.3;
+            }
+        }
+    }
+
+
+
+    
+    main {
+        @include gridTemp($rows: 1fr 10fr);
+        
+        .summary {
+            margin: 0.1rem auto;
+
+        }
+
+        .title {
+            font-size: $fsize;
+        }
+
+        .main {
+            @extend .grid;
+            @include gridTemp(1fr, 1fr, 1rem);
+        }
+
+        .side-panel {
+            margin: 1rem;
+        }
+
+
+        .projects {
+            grid-template-columns: 1fr;
+
+            .project {
+                @extend .whitebg;
+                border-radius: 0.5rem;
+                padding: 0.25rem 0.5rem;
+                border-left: 0.5rem solid $clrYellow;
+            }
+
+        }
+
+        .section-heading {
+            font-size: $fsize * 1.15;
+        }
+
+        .accouncements, .trendings {
+            @extend .whitebg;
+            border-radius: 0.25rem;
+            @extend .padding;
+
+            .title{
+                margin-top: $space / 2;
+            }
+
+            :first-child .title {
+                margin-top: 0;
+            }
+
+        }
+
+        .announcement:not(.announcement:last-child) {
+            border-bottom: 1px solid $clrGray;
+            padding-bottom: $space;
+        }
+    }
+
+
+
 }
