--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,7 @@
 .sticky, main .header, nav .containor {
   position: -webkit-sticky;
   position: sticky;
+  z-index: 10;
 }
 
 .padding, main .accouncements, main .trendings, main .projects-area, main .header {
@@ -16,25 +17,37 @@
 }
 
 .icon {
-  height: 30px;
-  width: 30px;
-  background-color: #F0B429;
-  border-radius: 50%;
+  height: 20px;
+  max-width: 20px;
+  object-fit: cover;
 }
 
 .avatar {
-  height: 50px;
-  width: 50px;
-  background-color: #983545;
+  height: 32px;
+  width: 32px;
   border-radius: 50%;
+  object-position: center;
+  object-fit: cover;
 }
 
-.whitebg, main .accouncements, main .trendings, main .projects .project, main .header, nav .icon {
+.whitebg, main .accouncements, main .trendings, main .projects .project, main .header {
   background-color: #FFF;
 }
 
 .hidden, .toggle {
   display: none;
+}
+
+.show {
+  display: block;
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  z-index: 15;
+  transition: none;
 }
 
 * {
@@ -51,6 +64,12 @@ body {
   max-width: 1500px;
   margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  scroll-behavior: smooth;
+}
+
+#dashboard-icon {
+  height: 45px;
+  max-width: 100%;
 }
 
 p {
@@ -64,7 +83,12 @@ p {
   background-color: #1992D4;
   height: 50px;
   width: 50px;
+  padding: 0.2rem;
   border-radius: 0.5rem;
+  background-image: url(../images/icons/menu.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 30px;
 }
 
 nav {
@@ -101,6 +125,10 @@ nav .icon {
   margin-right: 0.5rem;
 }
 
+main .big {
+  height: 50px;
+  width: 50px;
+}
 main .header {
   box-shadow: 1px 1px 10px #636363;
   top: 0;
@@ -125,6 +153,9 @@ main .search .icon, main .user-profile .icon {
 main .search {
   padding-left: 60px;
 }
+main .search .icon {
+  filter: invert(100%);
+}
 main .user-mini-profile {
   justify-self: end;
   padding: 0 2rem;
@@ -132,12 +163,16 @@ main .user-mini-profile {
 main .user-mini-profile * {
   margin: 0 0.7rem;
 }
+main .user-mini-profile .icon {
+  filter: invert(100%);
+}
 main .name {
   font-size: 1.2rem;
   font-weight: bold;
 }
 main .hello-user {
   font-weight: bold;
+  margin-left: 15px;
 }
 main .hello-user .greet {
   font-size: 0.8rem;
@@ -196,6 +231,9 @@ main .projects .project {
   border-radius: 0.5rem;
   padding: 0.5rem 1rem;
   border-left: 0.5rem solid #F0B429;
+}
+main .projects .project .icon {
+  filter: invert(100%);
 }
 main .projects .actions {
   float: right;
@@ -262,6 +300,8 @@ main .trending-item .user-subtitle {
   }
 
   nav {
+    width: 100vw;
+    height: 100vh;
     display: none;
   }
 
@@ -333,6 +373,11 @@ main .trending-item .user-subtitle {
   main .announcement:not(.announcement:last-child) {
     border-bottom: 1px solid #636363;
     padding-bottom: 1rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  main .projects {
+    grid-template-columns: 1fr;
   }
 }
 
