--- a/styles/main.css
+++ b/styles/main.css
@@ -40,14 +40,8 @@
 
 .show {
   display: block;
-  position: sticky;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
   overflow: hidden;
   z-index: 15;
-  transition: none;
 }
 
 * {
@@ -93,7 +87,6 @@ p {
 
 nav {
   overflow: hidden;
-  transition: 1s all linear;
   position: relative;
   height: 100%;
   padding: 0 1rem;
@@ -197,6 +190,7 @@ main .user-actions button {
   outline: none;
   background-color: #1992D4;
   color: #FFF;
+  margin: 0 0.25rem;
 }
 
 main {
@@ -229,7 +223,7 @@ main .projects {
 }
 main .projects .project {
   border-radius: 0.5rem;
-  padding: 0.5rem 1rem;
+  padding: 1rem;
   border-left: 0.5rem solid #F0B429;
 }
 main .projects .project .icon {
@@ -241,6 +235,7 @@ main .projects .actions {
   justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
+  padding: 0.5rem;
 }
 main .projects .summary {
   font-size: 1rem;
@@ -291,6 +286,7 @@ main .trending-item .user-subtitle {
 @media screen and (max-width: 1000px) {
   .toggle {
     display: block;
+    top: 5px;
   }
 
   body {
@@ -300,9 +296,14 @@ main .trending-item .user-subtitle {
   }
 
   nav {
-    width: 100vw;
-    height: 100vh;
+    position: absolute;
+    top: 50px;
+    left: 15px;
+    max-width: 300px;
+    width: 100%;
+    height: 75vh;
     display: none;
+    z-index: 20;
   }
 
   main .header {
@@ -378,6 +379,14 @@ main .trending-item .user-subtitle {
 @media screen and (max-width: 768px) {
   main .projects {
     grid-template-columns: 1fr;
+  }
+
+  .toggle {
+    top: 20px;
+  }
+
+  nav {
+    top: 70px;
   }
 }
 
